tests/snapshots/launchd_system.snap
---
source: src/daemon/service/launchd.rs
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>Label</key>
	<string>com.sbh.daemon</string>
	<key>ProgramArguments</key>
	<array>
		<string>/usr/local/bin/sbh</string>
		<string>daemon</string>
	</array>
	<key>RunAtLoad</key>
	<true/>
	<key>KeepAlive</key>
	<dict>
		<key>SuccessfulExit</key>
		<false/>
		<key>Crashed</key>
		<true/>
	</dict>
	<key>ThrottleInterval</key>
	<integer>60</integer>
	<key>Nice</key>
	<integer>19</integer>
	<key>ProcessType</key>
	<string>Background</string>
	<key>LowPriorityIO</key>
	<true/>
	<key>WorkingDirectory</key>
	<string>/private/var/sbh</string>
	<key>StandardOutPath</key>
	<string>/var/log/sbh/sbh.log</string>
	<key>StandardErrorPath</key>
	<string>/var/log/sbh/sbh.err</string>
	<key>EnvironmentVariables</key>
	<dict>
		<key>SBH_CONFIG_PATH</key>
		<string>/Library/Application Support/sbh/config.toml</string>
		<key>SBH_CONFIG</key>
		<string>/Library/Application Support/sbh/config.toml</string>
		<key>RUST_LOG</key>
		<string>info</string>
		<key>SBH_LAUNCHD_LABEL</key>
		<string>com.sbh.daemon</string>
	</dict>
</dict>
</plist>
